crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__compare__multiple_equals.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/compare/multiple_equals.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..41,
        body: [
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 25..32,
                    targets: [
                        Compare(
                            ExprCompare {
                                node_index: NodeIndex(None),
                                range: 25..29,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 25..26,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    Eq,
                                ],
                                comparators: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 29..29,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 31..32,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 33..40,
                    targets: [
                        Compare(
                            ExprCompare {
                                node_index: NodeIndex(None),
                                range: 33..37,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 33..34,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    NotEq,
                                ],
                                comparators: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 37..37,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 39..40,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # This is not JavaScript
2 | x === y
  |     ^ Syntax Error: Expected an expression
3 | x !== y
  |


  |
1 | # This is not JavaScript
2 | x === y
  | ^^^^ Syntax Error: Invalid assignment target
3 | x !== y
  |


  |
1 | # This is not JavaScript
2 | x === y
3 | x !== y
  |     ^ Syntax Error: Expected an expression
  |


  |
1 | # This is not JavaScript
2 | x === y
3 | x !== y
  | ^^^^ Syntax Error: Invalid assignment target
  |
